Add image and recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,52 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <br>
+    <img src="../img/lasagna.jpg" alt="tasty-lasagna-img">
+    <br>
+    <h3>DESCRIPTION</h3>
+    <p>Lasagna is a wide, flat sheet of pasta. 
+        Lasagna can refer to either the type of 
+        noodle or to the typical lasagna dish 
+        which is a dish made with several layers 
+        of lasagna sheets with sauce and other 
+        ingredients, such as meats and cheese, in 
+        between the lasagna noodles.
+    </p>
+
+    <br>
+
+    <p>Originally, the word lasagna was used to 
+        describe a pot in which food was being 
+        cooked rather than the pasta itself.  
+        Lasagna recipes have been around for ages,
+        dating back to as early as the thirteenth 
+        century.  Today, lasagnas come in all 
+        kinds of varieties from veggies and cream sauces to 
+        traditional sauce and cheese lasagnas as well as meat lasagnas.
+    </p>
+    <br>
+    <h3>INGREDIENTS</h3>
+    <ul>
+        <li>Italian Sausage and Lean ground beef</li>
+        <li>Onion and two cloves of Garlic</li>
+        <li>2 cans of Tomato paste</li>
+        <li>2 tbs sugar</li>
+        <li>fresh parsley</li>
+        <li>ried basil leaves</li> 
+        <li>fennel seeds</li>  
+        <li>black pepper</li>
+        <li>lasagna noodles</li>
+        <li>eggs</li>
+        <li>mozarella and parmesan cheese</li>
+    </ul>
+    <br>
+    <h3>STEPS</h3>
+    <ol>
+        <li>Start by making the sauce with ground beef, bell peppers, onions, and a combo of tomato sauce, tomato paste, and crushed tomatoes. The three kinds of tomatoes gives the sauce great depth of flavor.</li>
+        <li>Let this simmer while you boil the noodles and get the cheeses ready. We're using ricotta, shredded mozzarella, and parmesan -- like the mix of tomatoes, this 3-cheese blend gives the lasagna great flavor!</li>
+        <li>From there, it's just an assembly job. A cup of meat sauce, a layer of noodles, more sauce, followed by a layer of cheese. Repeat until you have three layers and have used up all the ingredients.</li>
+        <li>Bake until bubbly and you're ready to eat!</li>
+    </ol>
 </body>
 </html>
