--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>ODIN-RECIPES</h1>
-    <a href="recipes/lasagna.html">lasagna</a>
+    <br>
+    <ul>
+        <li><a href="recipes/lasagna.html">lasagna</a></li>
+        <li><a href="recipes/steak.html"></a></li>
+        <li><a href=""></a></li>
+    </ul>
 </body>
 </html>
