--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <br>
     <ul>
         <li><a href="recipes/lasagna.html">lasagna</a></li>
-        <li><a href="recipes/steak.html"></a></li>
-        <li><a href="recipes/cabbageRoll.html"></a></li>
+        <li><a href="recipes/steak.html">Salisbury Steak</a></li>
+        <li><a href="recipes/cabbageRoll.html">Cabbage Roll</a></li>
     </ul>
 </body>
 </html>
