Change of Structure in the recipes page

--- a/recipes/cabbageRoll.html
+++ b/recipes/cabbageRoll.html
@@ -15,7 +15,7 @@
     <br>
     <p>Cabbage roll casserole is the saucy, satisfying 9x13 dish that will take your weeknight dinners from boring to bold. Enjoy a casserole dish that combines seasoned ground beef, chopped cabbage, and fluffy white rice with tomato sauce and beef broth for a wonderfully cozy bite. Learn how to make cabbage roll casserole, plus get tips on how to make it your own and what side dishes to pair it with for a fabulous meal.</p>
     <br>
-    <h3>INGREDIANTS</h3>
+    <h3>INGREDIENTS</h3>
     <ul>
         <li>2 pounds ground beef</li>
         <li>3 ½ pounds chopped cabbage</li>
@@ -25,6 +25,8 @@
         <li>1 teaspoon salt</li>   
         <li>2 (14 ounce) cans beef broth</li>
     </ul>
+    <br>
+    <h3>STEPS</h3>
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
         <li>Heat a large skillet over medium-high heat. Cook and stir ground beef in the hot skillet until browned and crumbly, 5 to 7 minutes. Drain and discard grease.        </li>
