--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -14,7 +14,7 @@
     <h3>DESCRIPTION</h3>
     <p>This Salisbury steak recipe comes together quickly and does not need a lot of time in the slow cooker. It's a delicious way to add flavor to ground beef and the children love it! The gravy is delightful served over mashed potatoes.</p>
     <br>
-    <h3>INGREDIANTS</h3>
+    <h3>INGREDIENTS</h3>
     <ul>
         <li>2 pounds lean ground beef</li>
         <li>½ cup Italian seasoned bread crumbs</li>
